--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body> 
         <table> 
              <tr> 
-            <td><img src="Deadpool-modified.png" height = "300"alt =" deadpool">
+            <td><img src="Your name.jpg" height = "300"alt =" hero and heroine passing by each other scene from YOURNAME anine">
             </td> 
             <td> 
                 <p>  <h1>Arpan</h1> <br> 
